StartGame PMD friendly